--- a/ml-lab0-master/lab0-visualization - auto_mpg.ipynb
+++ b/ml-lab0-master/lab0-visualization - auto_mpg.ipynb
@@ -788,7 +788,7 @@
     }
    ],
    "source": [
-    "g = sns.heatmap(data[['age', 'trestbps', 'chol', 'thalach']].corr(method='spearman'), \n",
+    "g = sns.heatmap(data[['mpg', 'horsepower', 'displacement', 'weight']].corr(method='spearman'), \n",
     "            annot=True)"
    ]
   },
